# cli_app_-assignment

./: .coverage  .gitignore  README.md  pyproject.toml
cli_app/: app.py  validators.py
tests/: conftest.py  test.py
