[tool.poetry]
name = "cli-app"
version = "0.1.0"
description = ""
authors = ["Павел Сергеев <pavel.al.sergeev@gmail.com>"]
readme = "README.md"
packages = [{include = "cli_app"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
coverage = "^6.5.0"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
